name:                persistent-pgvector
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Wno-orphans
  default-language:    Haskell2010
  build-depends:       aeson >=1.3.1 && <1.6
                     , base >=4.9.0 && <4.15
                     , persistent >=2.8.2 && <2.14
                     , text >=1.2.3 && <1.3
                     , vector >=0.12.0 && <0.13
  exposed-modules:     Database.Persist.Vector
